--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="flex items-center justify-center min-h-screen bg-slate-800">
         <div class="flex flex-col lg:flex-row my-6 space-y-6 lg:space-y-0 lg:space-x-6 lg:my-0">
             <!-- Column 1 -->
-             <div class="bg-slate-700 rounded-xl text-white">
+             <div class="bg-slate-700 rounded-xl text-white transform hover:scale-105 duration-200">
                 <div class="p-8 mx-3 mt-3 rounded-t-xl bg-slate-800">
                     <div class="text-center uppercase">Basic</div>
                     <h2 class="mt-10 font-serif text-5xl text-center">100GB</h2>
@@ -74,7 +74,7 @@
                 </div>
              </div>
              <!-- Column 2 -->
-             <div class="bg-violet-600 rounded-xl text-white">
+             <div class="bg-violet-600 rounded-xl text-white transform hover:scale-105 duration-200">
                 <div class="p-8 mx-3 mt-3 rounded-t-xl bg-slate-800">
                     <div class="text-center uppercase">Standard</div>
                     <h2 class="mt-10 font-serif text-5xl text-center">200GB</h2>
@@ -138,7 +138,7 @@
                 </div>
              </div>
              <!-- Column 3 -->
-             <div class="bg-slate-700 rounded-xl text-white">
+             <div class="bg-slate-700 rounded-xl text-white transform hover:scale-105 duration-200">
                 <div class="p-8 mx-3 mt-3 rounded-t-xl bg-slate-800">
                     <div class="text-center uppercase">Premium</div>
                     <h2 class="mt-10 font-serif text-5xl text-center">2TB</h2>
